# quantum-circuit-optimizer

./: .gitignore  .opencode-context.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
agent_docs/: SCOPE_OF_WORK.md  quantum_circuit_optimizer_guide.md  sprint-1a-foundation.md
benchmarks/: benchmark_circuits.cpp
docs/: Doxyfile  architecture.md  building.md  index.md
docs/tutorial/: 01-circuits.md  02-parsing.md  03-optimization.md  04-routing.md
examples/: basic_usage.cpp  optimization_demo.cpp  routing_demo.cpp
include/ir/: Circuit.hpp  DAG.hpp  Gate.hpp  Qubit.hpp  Types.hpp
include/parser/: Lexer.hpp  Parser.hpp  QASMError.hpp  Token.hpp
include/passes/: CancellationPass.hpp  CommutationPass.hpp  IdentityEliminationPass.hpp  Pass.hpp  PassManager.hpp  RotationMergePass.hpp
include/routing/: Router.hpp  SabreRouter.hpp  Topology.hpp
src/: main.cpp
tests/ir/: test_circuit.cpp  test_dag.cpp  test_gate.cpp
tests/parser/: test_lexer.cpp  test_parser.cpp
tests/passes/: test_passes.cpp
tests/routing/: test_routing.cpp
